--- a/OptimizationXLL/OptimizationXLL/OptimizationXLL.vcxproj
+++ b/OptimizationXLL/OptimizationXLL/OptimizationXLL.vcxproj
@@ -157,7 +157,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <OutputFile>$(OutDir)$(ProjectName).xll</OutputFile>
+      <OutputFile>$(OutDir)TracerLPM_Opt_32.xll</OutputFile>
       <AdditionalLibraryDirectories>C:\2010 Office System Developer Resources\Excel2010XLLSDK\LIB</AdditionalLibraryDirectories>
       <AdditionalDependencies>xlcall32.lib;frmwrk32.lib;comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TracerLPM.def</ModuleDefinitionFile>
