--- a/OptimizationXLL/OptimizationXLL/OptimizationXLL.vcxproj
+++ b/OptimizationXLL/OptimizationXLL/OptimizationXLL.vcxproj
@@ -190,7 +190,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <OutputFile>$(OutDir)$(ProjectName).xll</OutputFile>
+      <OutputFile>$(OutDir)TracerLPM_Opt_64.xll</OutputFile>
       <AdditionalLibraryDirectories>C:\boost_1_62_0\boost_1_62_0\libs;C:\2010 Office System Developer Resources\Excel2010XLLSDK\LIB\x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>xlcall32.lib;frmwrk32.lib;comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TracerLPM.def</ModuleDefinitionFile>
